Add agent data to rds list api
