# api/swagger/models/api_r_d_s_agent.go
@@ -1,0 +1,43 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// APIRDSAgent api r d s agent
+// swagger:model apiRDSAgent
+type APIRDSAgent struct {
+
+	// qan db instance uuid
+	QanDbInstanceUUID string `json:"qan_db_instance_uuid,omitempty"`
+}
+
+// Validate validates this api r d s agent
+func (m *APIRDSAgent) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *APIRDSAgent) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *APIRDSAgent) UnmarshalBinary(b []byte) error {
+	var res APIRDSAgent
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
