# api/swagger/models/api_r_d_s_instance.go
@@ -16,6 +16,9 @@ import (
 // swagger:model apiRDSInstance
 type APIRDSInstance struct {
 
+	// agent
+	Agent *APIRDSAgent `json:"agent,omitempty"`
+
 	// node
 	Node *APIRDSNode `json:"node,omitempty"`
 
@@ -26,6 +29,10 @@ type APIRDSInstance struct {
 // Validate validates this api r d s instance
 func (m *APIRDSInstance) Validate(formats strfmt.Registry) error {
 	var res []error
+
+	if err := m.validateAgent(formats); err != nil {
+		res = append(res, err)
+	}
 
 	if err := m.validateNode(formats); err != nil {
 		res = append(res, err)
@@ -38,6 +45,24 @@ func (m *APIRDSInstance) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *APIRDSInstance) validateAgent(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Agent) { // not required
+		return nil
+	}
+
+	if m.Agent != nil {
+		if err := m.Agent.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("agent")
+			}
+			return err
+		}
+	}
+
 	return nil
 }
 
