# models/agent_reform.go
@@ -27,7 +27,7 @@ func (v *agentTableType) Name() string {
 
 // Columns returns a new slice of column names for that view or table in SQL database.
 func (v *agentTableType) Columns() []string {
-	return []string{"id", "type", "runs_on_node_id", "listen_port"}
+	return []string{"id", "type", "runs_on_node_id", "qan_db_instance_uuid", "listen_port"}
 }
 
 // NewStruct makes a new struct for that view or table.
@@ -47,17 +47,18 @@ func (v *agentTableType) PKColumnIndex() uint {
 
 // AgentTable represents agents view or table in SQL database.
 var AgentTable = &agentTableType{
-	s: parse.StructInfo{Type: "Agent", SQLSchema: "", SQLName: "agents", Fields: []parse.FieldInfo{{Name: "ID", Type: "int32", Column: "id"}, {Name: "Type", Type: "AgentType", Column: "type"}, {Name: "RunsOnNodeID", Type: "int32", Column: "runs_on_node_id"}, {Name: "ListenPort", Type: "*uint16", Column: "listen_port"}}, PKFieldIndex: 0},
+	s: parse.StructInfo{Type: "Agent", SQLSchema: "", SQLName: "agents", Fields: []parse.FieldInfo{{Name: "ID", Type: "int32", Column: "id"}, {Name: "Type", Type: "AgentType", Column: "type"}, {Name: "RunsOnNodeID", Type: "int32", Column: "runs_on_node_id"}, {Name: "QanDBInstanceUUID", Type: "*string", Column: "qan_db_instance_uuid"}, {Name: "ListenPort", Type: "*uint16", Column: "listen_port"}}, PKFieldIndex: 0},
 	z: new(Agent).Values(),
 }
 
 // String returns a string representation of this struct or record.
 func (s Agent) String() string {
-	res := make([]string, 4)
+	res := make([]string, 5)
 	res[0] = "ID: " + reform.Inspect(s.ID, true)
 	res[1] = "Type: " + reform.Inspect(s.Type, true)
 	res[2] = "RunsOnNodeID: " + reform.Inspect(s.RunsOnNodeID, true)
-	res[3] = "ListenPort: " + reform.Inspect(s.ListenPort, true)
+	res[3] = "QanDBInstanceUUID: " + reform.Inspect(s.QanDBInstanceUUID, true)
+	res[4] = "ListenPort: " + reform.Inspect(s.ListenPort, true)
 	return strings.Join(res, ", ")
 }
 
@@ -68,6 +69,7 @@ func (s *Agent) Values() []interface{} {
 		s.ID,
 		s.Type,
 		s.RunsOnNodeID,
+		s.QanDBInstanceUUID,
 		s.ListenPort,
 	}
 }
@@ -79,6 +81,7 @@ func (s *Agent) Pointers() []interface{} {
 		&s.ID,
 		&s.Type,
 		&s.RunsOnNodeID,
+		&s.QanDBInstanceUUID,
 		&s.ListenPort,
 	}
 }
